--- a/style/style.css
+++ b/style/style.css
@@ -32,77 +32,50 @@ body{ /* CORPO */
 
 #menu{ /*PRIMEIRO DIV*/
     background-color: black;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 35px;
+    height: 70px;
     3px solid rgb(255, 255, 255);
-    text-shadow:
-    0 0 7px rgba(0, 0, 0, 0.075),
-    0 0 10px rgba(255, 255, 255, 0.014),
-    0 0 21px rgba(150, 154, 160, 0.877),
-    0 0 42px #0fa,
-    0 0 82px #0fa,
-    0 0 92px #0fa,
-    0 0 102px #0fa,
-    0 0 151px #0fa;
+    3px solid rgb(0, 0, 0);
 }
 
-#navMENU ul { /* UL */
+#navMENU ul li a{ /* UL */
     display: inline-flex;
     float: right;
     gap: 2rem;
     padding-right: 30px;
     margin-top: 17px;
-}
-
-#ulMENU li{
-
-}
-
-#ulMENU li a{ /* MENU CANTO SUPERIOR DIREITO */
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 18px;
     font-style: normal;
 }
 
-#middle{/*SEGUNDO DIV*/
-    background-color: yellow;
-    background-image: url(https://images.hdqwalls.com/download/aurora-borealis-9h-1366x768.jpg);
-    background-position-x: center;
-    background-position: 500%;
-    margin: 0%;
-} 
+#linkMENU {
+    text-decoration: none;
+    color: white;
+    display: inline-flex;
+    padding-left: 30px;
+    font-size: 25px;
+}
 
-#middle{
+#h1MENU{
+    font-weight: 300;
+}
+
+
+.container {
+    width: 100%;
+    height: 100%;
+
+    background: white;
+}
+
+.middle{
     height: 300px;
-}
-
-#logoAuroraMenu{
-    margin-top: -13%;
-    margin-bottom: -12%;
-    margin-left: -10%;
-}
-
-#logoAuroraMiddle{
-    width: 600px;
-    height: px;
-    margin-top: -3%;
-    margin-bottom: -3%;
-    image-rendering: optimizeQuality;
-}
-
-#h1Middle{
-    margin: 0%;
-    margin-top: -20%;
-    /*color: rgb(0, 0, 0);
-    text-shadow:
-      0 0 7px rgba(0, 0, 0, 0.075),
-      0 0 10px rgba(255, 255, 255, 0.014),
-      0 0 21px rgba(150, 154, 160, 0.877),
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px #0fa,
-      0 0 151px #0fa; */
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    font-size: 200px;
+    font-weight: 300;
+    padding-top: 20px;
+    background-image: url(../images/teste.gif);
 }
