--- a/style/style.css
+++ b/style/style.css
@@ -61,6 +61,10 @@ body{ /* CORPO */
     font-weight: 300;
 }
 
+#linkMIDDLE{
+    text-decoration: none;
+}
+
 
 .container {
     width: 100%;
@@ -77,5 +81,7 @@ body{ /* CORPO */
     font-size: 200px;
     font-weight: 300;
     padding-top: 20px;
-    background-image: url(../images/teste.gif);
+    background-color: blue;
 }
+
+
