--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,9 @@
     list-style: none;
     font-family: 'Ailerons-Regular', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 body::-webkit-scrollbar {
     width: 11px;       
@@ -33,16 +36,24 @@ body{ /* CORPO */
 #menu{ /*PRIMEIRO DIV*/
     background-color: black;
     height: 70px;
+    position: relative;
     3px solid rgb(255, 255, 255);
-    3px solid rgb(0, 0, 0);
+    3px solid rgb(0, 0, 0);   
 }
 
-#navMENU ul li a{ /* UL */
+#navMENU ul{ /* UL */
     display: inline-flex;
     float: right;
     gap: 2rem;
     padding-right: 30px;
     margin-top: 17px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-style: normal;
+}
+
+#navMENU li a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 18px;
