--- a/style/style.css
+++ b/style/style.css
@@ -93,6 +93,18 @@ body{ /* CORPO */
     font-weight: 300;
     padding-top: 20px;
     background-color: blue;
+    justify-items: center;
+    background-attachment: fixed;
+    display: flex;
+    flex: 1 0 auto;
+    position: relative;
+    z-index: -1;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    background-color: #fae4d8;
+  
 }
 
 
