--- a/style/style2.css
+++ b/style/style2.css
@@ -4,25 +4,29 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
 
 body {
   width: 100vw;
   height: 100vh;
-  display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0,0,0,0.1);
+  background-color: darkgrey;
 }
 
 button {
   cursor: pointer;
 }
 
+.divBody{
+  font-family: 'Poppins', sans-serif;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 30px;
+}
+
 .container {
-  width: 90%;
-  height: 80%;
+  padding-left: 20px;
   border-radius: 10px;
   background: white;
 }
@@ -39,6 +43,7 @@ button {
   font-weight: 900;
   font-size: 20px;
   word-break: break-all;
+  margin-right: 840px;
 }
 
 #new {
@@ -224,4 +229,10 @@ td button i {
 
 td button i:first-child {
   margin-right: 10px;
+}
+
+#cancelar{
+  text-decoration: none;
+  color: white;
+  margin-left: 0%;
 }
