--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,8 @@ body::-webkit-scrollbar {
   }
 
 body{ /* CORPO */
-    background-color: rgb(255, 255, 255);
+    background-color: #111111;
+    /* background-color: black; */
     background-size: 100%;
     background-attachment: fixed;
 }
@@ -94,17 +95,49 @@ body{ /* CORPO */
     padding-top: 20px;
     background-color: blue;
     justify-items: center;
-    background-attachment: fixed;
-    display: flex;
     flex: 1 0 auto;
     position: relative;
     z-index: -1;
+    background-image: url(https://thumbs.gfycat.com/AcademicIllinformedGreatdane-size_restricted.gif);
     justify-content: center;
     align-items: center;
-    background-repeat: no-repeat;
-    background-origin: content-box;
-    background-color: #fae4d8;
-  
+    background-size: 500px;
+    background-attachment: fixed;
+}
+
+#editVideo{
+    min-height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1px;
+    padding-bottom: 30px;
+    border-radius: 2px;
+    background-color: black;
 }
 
 
+#h1Video{
+    color: white;
+    font-weight: 300;
+    font-size: 45px;
+    background-color: black;
+    padding-top: 20px; 
+    padding-left: 30px;
+}
+
+#marcas{
+    margin-top: 50px;
+}
+
+#editMarcas{
+    min-height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1px;
+    padding-bottom: 30px;
+    border-radius: 2px;
+    background-color: white;
+    height: 500px;
+}
