--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,7 @@ body::-webkit-scrollbar {
   }
 
 body{ /* CORPO */
+    background-image: url(https://i.pinimg.com/originals/85/a8/ec/85a8ec657916bb73057ebb16d3b0958e.jpg);
     background-color: #000000;
     /* background-color: black; */
     background-size: 100%;
@@ -97,12 +98,12 @@ body{ /* CORPO */
     font-size: 200px;
     font-weight: 300;
     padding-top: 20px;
-    background-color: blue;
+    /* background-color: blue; */
     justify-items: center;
     flex: 1 0 auto;
     position: relative;
     z-index: -1;
-    background-image: url(https://thumbs.gfycat.com/AcademicIllinformedGreatdane-size_restricted.gif);
+    /* background-image: url(https://thumbs.gfycat.com/AcademicIllinformedGreatdane-size_restricted.gif); */
     justify-content: center;
     align-items: center;
     background-size: 500px;
@@ -115,7 +116,7 @@ body{ /* CORPO */
     align-items: center;
     justify-content: center;
     padding-top: 1px;
-    padding-bottom: 30px;
+    padding-bottom: px;
     border-radius: 2px;
     background-color: black;
 }
